...
                        </prototypes>
                        <connections>
                            <outlet property="dataSource" destination="Gva-eS-fVf" id="KL3-ii-1kG"/>
                            <outlet property="delegate" destination="Gva-eS-fVf" id="kW2-UK-4xU"/>
                        </connections>
                    </tableView>
                    <navigationItem key="navigationItem" title="Users" id="6wu-ZF-ffR"/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                </tableViewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="lL8-MA-YqU" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="1676" y="-670"/>
        </scene>
        <!--Settings-->
        <scene sceneID="FDP-5O-ZOU">
            <objects>
                <tableViewController title="Settings" id="Au9-pc-DYJ" customClass="MGSettingsViewController" sceneMemberID="viewController">
                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="f5x-vc-QWZ">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <color key="backgroundColor" red="0.93725490199999995" green="0.93725490199999995" blue="0.95686274510000002" alpha="1" colorSpace="calibratedRGB"/>
                        <sections>
                            <tableViewSection headerTitle="General" id="bDT-OW-f9J">
...
                                        <rect key="frame" x="0.0" y="157.5" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="J42-ps-xfK" id="qI7-Mf-byQ">
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Show photo title in grid" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ndi-De-vjA">
                                                    <rect key="frame" x="20" y="12" width="168" height="20"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.16470588235294117" green="0.16470588235294117" blue="0.17254901960784313" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="kkw-oy-UkU">
...
                                        <rect key="frame" x="0.0" y="201.5" width="320" height="44"/>
                                        <autoresizingMask key="autoresizingMask"/>
                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="fOI-0w-CIL" id="3bJ-ps-2UW">
                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                            <autoresizingMask key="autoresizingMask"/>
                                            <subviews>
                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Use local cache for photos" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="uBm-13-UW7">
                                                    <rect key="frame" x="20" y="12" width="194" height="20"/>
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.17254901959999999" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" on="YES" translatesAutoresizingMaskIntoConstraints="NO" id="VbR-n2-4pB">
...
                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
                                                    <color key="textColor" red="0.1647058824" green="0.1647058824" blue="0.17254901959999999" alpha="1" colorSpace="calibratedRGB"/>
                                                    <nil key="highlightedColor"/>
                                                </label>
                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="AED-tZ-dYU">
                                                    <rect key="frame" x="257" y="7" width="45" height="30"/>
                                                    <state key="normal" title="Delete">
                                                        <color key="titleColor" red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="calibratedRGB"/>
                                                    </state>
                                                    <connections>
                                                        <action selector="deleteLocalData:" destination="Au9-pc-DYJ" eventType="touchUpInside" id="LWF-80-Yj0"/>
                                                    </connections>
                                                </button>
...
            <point key="canvasLocation" x="661" y="-607"/>
        </scene>
        <!--Me-->
        <scene sceneID="PyR-Gh-1PC">
            <objects>
                <navigationController title="Me" automaticallyAdjustsScrollViewInsets="NO" id="ryJ-BU-GMP" sceneMemberID="viewController">
                    <tabBarItem key="tabBarItem" title="My Account" image="ProfileIcon" id="Go2-Cs-SLL"/>
                    <toolbarItems/>
                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="VOW-aY-uQ5">
                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                        <autoresizingMask key="autoresizingMask"/>
                    </navigationBar>
...
