...
        
        if ([fileURL.path hasSuffix:@"-small"] || [fileURL.path hasSuffix:@"-big"]) {
            [[NSFileManager defaultManager] removeItemAtURL:fileURL error:nil];
        }
    }
    
    UIAlertController *alert = [UIAlertController alertControllerWithTitle:@"Success" message:@"Files successfully deleted" preferredStyle:UIAlertControllerStyleAlert];
    UIAlertAction *okAction = [UIAlertAction actionWithTitle:@"Ok" style:UIAlertActionStyleDefault handler:nil];
    [alert addAction:okAction];
    [self presentViewController:alert animated:YES completion:nil];
}

- (IBAction)toggleShowPhotoTitleInGrid:(id)sender {
    
...
